# sf-api

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  todo.md
.github/: FUNDING.yml
.github/workflows/: changelog.yml  publish.yml  rust.yml
benches/: battle_benchmark.rs
examples/: cached_testing.rs  decrypt_url.rs  dungeons.rs  expedition.rs  gamble.rs  hellevator.rs  l_dungeon.rs  l_dungeons.rs  questing.rs  world_boss.rs
examples/check_guild_interaction_with_db/: README.md  guildDataWithDatabase.rs
examples/dungeons/: main.rs
examples/expedition/: main.rs
examples/gamble/: Cargo.toml  main.rs
examples/hellevator/: cargo.toml  main.rs
examples/questing/: Cargo.toml  main.rs
src/: command.rs  constants.rs  error.rs  lib.rs  misc.rs  response.rs  session.rs  sso.rs
src/gamestate/: arena.rs  character.rs  dungeons.rs  event.rs  fortress.rs  guild.rs  idle.rs  items.rs  legendary_dungeon.rs  legendary_dungeons.rs  mod.rs  rewards.rs  social.rs  tavern.rs  underworld.rs  unlockables.rs
src/simulate/: config.rs  constants.rs  damage.rs  dungeons.json  fighter.rs  mod.rs  pet_dungeons.json  upgradeable.rs
src/simulate/class/: asassin.rs  bard.rs  basic.rs  battle_mage.rs  berserker.rs  demon_hunter.rs  druid.rs  mod.rs  necro.rs  paladin.rs  plague_doctor.rs
tests/: battle_simulation.rs
