[package]
name = "sf-api"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A simple API to send commands to the S&F servers and parse their responses into characters"
repository = "https://github.com/the-marenga/sf-api"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1"
base64 = "0.21"
chrono = "0.4"
fastrand = "2.0"
libaes = "0.7"
log = "0.4"
num = "0.4"
num-bigint = { version = "0.4" }
num-derive = "0.4"
num-traits = "0.2"
once_cell = "1.19"
ouroboros = "0.18"
reqwest = { version = "0.11", features = ["gzip", "deflate", "brotli"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sha1 = "0.10"
strum = { version = "0.25", features = ["strum_macros", "derive"] }
tokio = "1.35"
url = "2.5"

[features]
default = ["sso", "serde"]
sso = ["dep:serde", "dep:serde_json"]
serde = ["dep:serde", "num-bigint/serde", "chrono/serde"]
