[package]
name = "sf-api"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A simple API to send commands to the Shakes & Fidget servers and parse their responses into characters"
repository = "https://github.com/the-marenga/sf-api"
readme = "README.md"

[dependencies]
base64 = "0.22"
chrono = "0.4"
enum-map = "2.7"
fastrand = "2.3"
libaes = "0.7"
log = "0.4"
num-bigint = "0.4"
num-derive = "0.4"
num-traits = "0.2"
ouroboros = "0.18"
reqwest = { version = "0.12", features = ["gzip", "deflate"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sha1 = "0.10"
strum = { version = "0.27", features = ["strum_macros", "derive"] }
tokio = { version = "1.47", optional = true }
url = { version = "2.5", optional = true }

[features]
default = ["sso", "serde"]
session = ["dep:reqwest", "dep:tokio", "dep:url"]
sso = ["session", "dep:serde", "dep:serde_json"]
serde = ["dep:serde", "num-bigint/serde", "chrono/serde", "enum-map/serde"]

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
env_logger = "0.11.8"
